RESOLVED FIXED15122
REGRESSION: Assertion failure in avoidIntersectionWithNode (!node || node->parentNode()) running editing/deleting/5408255.html
https://bugs.webkit.org/show_bug.cgi?id=15122
Summary REGRESSION: Assertion failure in avoidIntersectionWithNode (!node || node->pa...
mitz
Reported 2007-08-31 02:05:48 PDT
editing/deleting/5408255.html fails in debug builds with ASSERTION FAILED: !node || node->parentNode() (/WebKit/WebCore/editing/htmlediting.cpp:915 WebCore::Selection WebCore::avoidIntersectionWithNode(const WebCore::Selection&, WebCore::Node*)) <http://build.webkit.org/post-commit-leaks-intel-mac-os-x/builds/1074> is the first build to show the failure. The assertion itself was changed in <http://trac.webkit.org/projects/webkit/changeset/25311>.
Attachments
patch that fixes assertion (2.18 KB, patch)
2007-08-31 09:17 PDT, Darin Adler
andersca: review+
Mark Rowe (bdash)
Comment 1 2007-08-31 02:07:35 PDT
Darin Adler
Comment 2 2007-08-31 09:12:12 PDT
This is happening because the delete button controller no longer destroys its container element when not in use. So it can be hanging around with no parent. We're OK as long as we don't actually try to work with the container element, so I just moved the assertion.
Darin Adler
Comment 3 2007-08-31 09:17:24 PDT
Created attachment 16169 [details] patch that fixes assertion
Anders Carlsson
Comment 4 2007-08-31 09:18:28 PDT
Comment on attachment 16169 [details] patch that fixes assertion r=me
Darin Adler
Comment 5 2007-08-31 09:20:07 PDT
Committed revision 25330.
Note You need to log in before you can comment on or make changes to this bug.