        Reviewed by Anders.

- http://bugs.webkit.org/show_bug.cgi?id=15122

        * editing/htmlediting.cpp: (WebCore::avoidIntersectionWithNode):
        Change assertion so that it only fires when actually modifying the selection.
        This isn't nearly as helpful, because the old assertion could catch potential
        problems in more cases, but it's not obvious how to do better.



Canonical link: https://commits.webkit.org/19817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25330 268f45cc-cd09-0410-ab3c-d52691b4dbfc